--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>travel-fly</title>
+    <title>Travel-Fly</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -24,7 +24,7 @@
           <a href="index.html">home </a>
           <a href="about.html">about </a>
           <a href="tour.html">tours </a>
-          <a href="#">special offers </a>
+          <a href="offers.html">special offers </a>
           <a href="blog.html">blog </a>
           <a href="contact.html">contact </a>
         </nav>
