--- a/uae.html
+++ b/uae.html
@@ -23,9 +23,9 @@
         <a href="index.html">home </a>
         <a href="about.html">about </a>
         <a href="tour.html">tours </a>
-        <a href="#">special offers </a>
-        <a href="#">blog </a>
-        <a href="#">contact </a>
+        <a href="offers.html">special offers </a>
+        <a href="blog.html">blog </a>
+        <a href="contact.html">contact </a>
       </div>
     </nav>
     <hr class="nav-hr-black" />
