Added header in Offer page and stylized it

--- a/offers.html
+++ b/offers.html
@@ -30,6 +30,16 @@
     </nav>
     <hr class="nav-hr-black" />
 
+    <div id="app">
+      <div class="title-Header">
+        <h1>
+          SPECIAL OFFER(S):
+          <hr />
+        </h1>
+      </div>
+      <div></div>
+    </div>
+
     <!-- footer -->
     <footer>
       <div class="footer-content">
