added images and stylized them

--- a/offers.html
+++ b/offers.html
@@ -31,13 +31,20 @@
     <hr class="nav-hr-black" />
 
     <div id="app">
-      <div class="title-Header">
-        <h1>
-          SPECIAL OFFER(S):
-          <hr />
-        </h1>
+      <div class="spe-Offers">
+        <div class="title-Header">
+          <h1>
+            SPECIAL OFFER(S):
+            <hr />
+          </h1>
+        </div>
+
+        <div class="offers-IMG-box">
+          <div class="offers-img1"></div>
+        </div>
       </div>
-      <div></div>
+
+      <button class="learnMore">LEARN MORE</button>
     </div>
 
     <!-- footer -->
