Added images and text sections to Offers Page

--- a/offers.html
+++ b/offers.html
@@ -15,36 +15,74 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <nav>
-      <div class="logo">
-        <img src="images/logo/logo-black.png" alt="logo" />
-      </div>
-      <div class="links">
-        <a href="index.html">home </a>
-        <a href="about.html">about </a>
-        <a href="tour.html">tours </a>
-        <a href="offers.html">special offers </a>
-        <a href="blog.html">blog </a>
-        <a href="contact.html">contact </a>
-      </div>
-    </nav>
-    <hr class="nav-hr-black" />
-
-    <div id="app">
-      <div class="spe-Offers">
-        <div class="title-Header">
-          <h1>
-            SPECIAL OFFER(S):
-            <hr />
-          </h1>
+    <div>
+      <nav>
+        <div class="logo">
+          <img src="images/logo/logo-black.png" alt="logo" />
         </div>
+        <div class="links">
+          <a href="index.html">home </a>
+          <a href="about.html">about </a>
+          <a href="tour.html">tours </a>
+          <a href="offers.html">special offers </a>
+          <a href="blog.html">blog </a>
+          <a href="contact.html">contact </a>
+        </div>
+      </nav>
+      <hr class="nav-hr-black" />
+    </div>
+    <div id="app">
+      <div class="title-Header">
+        <h1>
+          SPECIAL OFFER(S):
+          <hr />
+        </h1>
+      </div>
 
+      <!-- First Section -->
+      <div class="spe-Offers-Section">
         <div class="offers-IMG-box">
           <div class="offers-img1"></div>
         </div>
+        <div class="sectionText">
+          <div class="title-Header">
+            <h1>
+              BARCELONA, SPAIN
+              <span> (20% OFF) </span>
+              <hr />
+            </h1>
+          </div>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat
+            dignissimos tenetur at, reprehenderit perspiciatis laudantium sit
+            debitis quam corrupti, dolor reiciendis excepturi veritatis
+            repellendus est et! Ipsam libero similique nemo?
+          </p>
+          <button class="learnMore">LEARN MORE</button>
+        </div>
       </div>
-
-      <button class="learnMore">LEARN MORE</button>
+      <!-- Second Section -->
+      <div class="spe-Offers-Section">
+        <div class="offers-IMG-box">
+          <div class="offers-img2"></div>
+        </div>
+        <div class="sectionText">
+          <div class="title-Header">
+            <h1>
+              BANGKOK, THAILAND
+              <span> (10% OFF) </span>
+              <hr />
+            </h1>
+          </div>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat
+            dignissimos tenetur at, reprehenderit perspiciatis laudantium sit
+            debitis quam corrupti, dolor reiciendis excepturi veritatis
+            repellendus est et! Ipsam libero similique nemo?
+          </p>
+          <button class="learnMore">LEARN MORE</button>
+        </div>
+      </div>
     </div>
 
     <!-- footer -->
