created first section for blog page

--- a/blog.html
+++ b/blog.html
@@ -30,6 +30,29 @@
     </nav>
     <hr class="nav-hr-black" />
 
+    <div id="app">
+      <div class="title-Header">
+        <h1>
+          BLOG:
+          <hr style="width: 100px" />
+        </h1>
+      </div>
+      <div class="blog-Section">
+        <div class="dateBox">
+          <p>
+            <span class="dateNumber">06</span>
+            <span class="dateMonth">JUN</span>
+          </p>
+        </div>
+        <div class="blog-Section-Row">
+          <div class="blog-IMG-box">
+            <div class="blog-IMG"></div>
+          </div>
+          <p>Sed et persipiatis unde omnis iste natus</p>
+        </div>
+      </div>
+    </div>
+
     <!-- footer -->
     <footer>
       <div class="footer-content">
