Added text to Blog Section

--- a/blog.html
+++ b/blog.html
@@ -49,6 +49,12 @@
             <div class="blog-IMG"></div>
           </div>
           <p>Sed et persipiatis unde omnis iste natus</p>
+          <p class="small-text">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus
+            omnis possimus tempore ipsam deleniti! Repellat quo sunt quas sit
+            illo incidunt, magnam praesentium est necessitatibus? Culpa quo
+            tempore voluptas excepturi!
+          </p>
         </div>
       </div>
     </div>
