Added 2nd Blog Section and adjust margin space

--- a/blog.html
+++ b/blog.html
@@ -37,11 +37,33 @@
           <hr style="width: 100px" />
         </h1>
       </div>
+      <!-- Blog Section 1 -->
       <div class="blog-Section">
         <div class="dateBox">
           <p>
             <span class="dateNumber">06</span>
             <span class="dateMonth">JUN</span>
+          </p>
+        </div>
+        <div class="blog-Section-Row">
+          <div class="blog-IMG-box">
+            <div class="blog-IMG"></div>
+          </div>
+          <p>Sed et persipiatis unde omnis iste natus</p>
+          <p class="small-text">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus
+            omnis possimus tempore ipsam deleniti! Repellat quo sunt quas sit
+            illo incidunt, magnam praesentium est necessitatibus? Culpa quo
+            tempore voluptas excepturi!
+          </p>
+        </div>
+      </div>
+      <!-- Blog Section 2 -->
+      <div class="blog-Section">
+        <div class="dateBox">
+          <p>
+            <span class="dateNumber">23</span>
+            <span class="dateMonth">JUL</span>
           </p>
         </div>
         <div class="blog-Section-Row">
