Added Title for Contact Page

--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,15 @@
     </nav>
     <hr class="nav-hr-black" />
 
+    <div id="app">
+      <div class="title-Header">
+        <h1>
+          CONTACT US:
+          <hr style="width: 160px" />
+        </h1>
+      </div>
+    </div>
+
     <!-- footer -->
     <footer>
       <div class="footer-content">
