created and imported contact.scss file

--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,9 @@
           <hr style="width: 160px" />
         </h1>
       </div>
+
+      <!-- Map -->
+      <div class="mapBox"></div>
     </div>
 
     <!-- footer -->
