--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,19 @@
 
       <!-- Map -->
       <div class="mapBox"></div>
+
+      <!-- Address  -->
+      <div class="addressBox">
+        <p>
+          travel-fly Inc. <br />
+          8901 Marmora Road,<br />
+          Glasgow, D04 89GR.<br />
+          Freephone:+1 800 559 6580 <br />
+          Telephone:+1 800 603 6035 <br />
+          FAX:+1 800 889 9898 <br />
+          E-mail: mail@travelfly.org
+        </p>
+      </div>
     </div>
 
     <!-- footer -->
