Added Map Image to Contact Page

--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,8 @@
       <!-- Map -->
       <div class="mapBox"></div>
 
+      <form class="contact-Form"></form>
+
       <!-- Address  -->
       <div class="addressBox">
         <p>
