adjusted margin to Form

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
       <!-- Form -->
       <div>
-        <form>
+        <form class="bookForm">
           <h1>Booking form</h1>
           <!-- Name & Email inputs -->
           <div class="group1">
