Added input boxes

--- a/contact.html
+++ b/contact.html
@@ -38,22 +38,36 @@
         </h1>
       </div>
 
-      <!-- Map -->
-      <div class="mapBox"></div>
+      <div>
+        <!-- Map -->
+        <div class="mapBox"></div>
 
-      <form class="contact-Form"></form>
+        <form class="contact-Form">
+          <div>
+            <input class="contactBox1" type="text" placeholder="Your Name..." />
+          </div>
+          <div>
+            <input class="contactBox1" type="text" placeholder="Your Name..." />
+          </div>
+          <div>
+            <input class="contactBox1" type="text" placeholder="Your Name..." />
+          </div>
 
-      <!-- Address  -->
-      <div class="addressBox">
-        <p>
-          travel-fly Inc. <br />
-          8901 Marmora Road,<br />
-          Glasgow, D04 89GR.<br />
-          Freephone: +1 800 559 6580 <br />
-          Telephone: +1 800 603 6035 <br />
-          FAX: +1 800 889 9898 <br />
-          E-mail: mail@travelfly.org
-        </p>
+          <div class="contactBox2"></div>
+        </form>
+
+        <!-- Address  -->
+        <div class="addressBox">
+          <p>
+            travel-fly Inc. <br />
+            8901 Marmora Road,<br />
+            Glasgow, D04 89GR.<br />
+            Freephone: +1 800 559 6580 <br />
+            Telephone: +1 800 603 6035 <br />
+            FAX: +1 800 889 9898 <br />
+            E-mail: mail@travelfly.org
+          </p>
+        </div>
       </div>
     </div>
 
