finished Contact form

--- a/contact.html
+++ b/contact.html
@@ -38,36 +38,35 @@
         </h1>
       </div>
 
-      <div>
-        <!-- Map -->
-        <div class="mapBox"></div>
+      <div class="contact-Wrap">
+        <div style="flex-direction: column">
+          <!-- Map -->
+          <div class="mapBox"></div>
+          <!-- Address  -->
+          <div class="addressBox">
+            <p>
+              travel-fly Inc. <br />
+              8901 Marmora Road,<br />
+              Glasgow, D04 89GR.<br />
+              Freephone: +1 800 559 6580 <br />
+              Telephone: +1 800 603 6035 <br />
+              FAX: +1 800 889 9898 <br />
+              E-mail: mail@travelfly.org
+            </p>
+          </div>
+        </div>
 
         <form class="contact-Form">
-          <div>
-            <input class="contactBox1" type="text" placeholder="Your Name..." />
-          </div>
-          <div>
-            <input class="contactBox1" type="text" placeholder="Your Name..." />
-          </div>
-          <div>
-            <input class="contactBox1" type="text" placeholder="Your Name..." />
-          </div>
-
-          <div class="contactBox2"></div>
+          <input class="contactBox1" type="text" placeholder="Your Name..." />
+          <input
+            class="contactBox1"
+            type="text"
+            placeholder="Email Address..."
+          />
+          <input class="contactBox1" type="text" placeholder="Company..." />
+          <input class="contactBox2" type="text" placeholder="Message..." />
+          <button class="send-Message">SEND MESSAGE</button>
         </form>
-
-        <!-- Address  -->
-        <div class="addressBox">
-          <p>
-            travel-fly Inc. <br />
-            8901 Marmora Road,<br />
-            Glasgow, D04 89GR.<br />
-            Freephone: +1 800 559 6580 <br />
-            Telephone: +1 800 603 6035 <br />
-            FAX: +1 800 889 9898 <br />
-            E-mail: mail@travelfly.org
-          </p>
-        </div>
       </div>
     </div>
 
